--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -14,11 +14,17 @@
   grid-gap: 2rem;
   align-items: center;
 
-  &__item {}
+  &__item {
+    height: 100%;
+    width: 100%;
+  }
 
   &__link:link,
   &__link:visited {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     height: 100%;
     font-size: 1.4rem;
     color: $color-white;
@@ -26,6 +32,7 @@
     font-family: $font-display;
     text-transform: uppercase;
     text-align: center;
+    vertical-align: middle;
     padding: 1.5rem;
     transition: 0.2s;
   }
